--- a/proyecto_web/proyecto_web/css/style.css
+++ b/proyecto_web/proyecto_web/css/style.css
@@ -93,12 +93,14 @@ body {
   color: white;
   font-weight: 500;
   text-transform: uppercase;
+  border-radius: 20px;
+  margin-left: 3px; /* Esto separa un poco los botones entre si */
 }
 
 .navbar-custom .nav-link:hover {
   color: white;
-  background-color: darkblue;
-  border-radius: 10px;
+  background-color: rgb(47, 105, 239);
+  border-radius: 20px;
 }
 
 .select-menu {
@@ -110,7 +112,7 @@ body {
 }
 
 .select-menu:hover {
-  background-color: darkblue;
+  background-color: rgb(47, 105, 239);
 }
 
 .card-feature {
@@ -169,4 +171,12 @@ main{
 .footer {
   background-color: var(--dark-color);
   color: white;
+}
+
+/* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
+.index {
+    background-color: darkblue;
+    color: #fff;
+    font-weight: bold;
+    box-shadow: inset 0 0 0 2px var(--light-gray);
 }
