--- a/proyecto_web/proyecto_web/css/styleLogin.css
+++ b/proyecto_web/proyecto_web/css/styleLogin.css
@@ -107,3 +107,10 @@
   background-color: #ffebee;
   color: #c62828;
 }
+
+/* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
+.login {
+    background-color: darkblue;
+    color: #fff;
+    box-shadow: inset 0 0 0 2px var(--light-gray);
+}
