--- a/proyecto_web/proyecto_web/css/styleUsuario.css
+++ b/proyecto_web/proyecto_web/css/styleUsuario.css
@@ -25,3 +25,9 @@
     color: #ecf0f1;
 }
 
+/* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
+.usuario {
+    background-color: darkblue;
+    color: #fff;
+    box-shadow: inset 0 0 0 2px var(--light-gray);
+}
