--- a/proyecto_web/proyecto_web/css/style.css
+++ b/proyecto_web/proyecto_web/css/style.css
@@ -18,6 +18,22 @@ body {
   height: 100%;
 }
 
+/* Logo */
+.img-header {
+  max-width: 80px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: transform 0.3s, box-shadow 0.3s;
+  transform: translateX(-75px);
+}
+
+.img-header:hover {
+  transform: translateX(-75px) scale(1.05); 
+  box-shadow: 1px 1px 5px rgba(31, 28, 28, 0.5);
+}
+/* Logo */
+
+
 /* Banner */
 .banner {
   background-image: url('../images/bannerTurismo.jpg');
@@ -61,28 +77,17 @@ body {
 }
 
 .category-urbano {
-  background-image: url('../images/turismoUrbano.jpeg');
+  background-image: url('../images/surfCity.jpg');
 }
 
 .category-playa {
-  background-image: url('../images/turismoPlaya.jpg');
+  background-image: url('../images/cerroVerde.jpeg');
 }
 
 .category-montaña {
-  background-image: url('../images/turismoMontañaPuertaDelDiablo.jpg');
+  background-image: url('../images/suchitoto.jpg');
 }
 
-/* Galería */
-.gallery-img {
-  height: 200px;
-  width: 100%;
-  object-fit: cover;
-  transition: transform 0.3s ease;
-}
-
-.gallery-img:hover {
-  transform: scale(1.03);
-}
 
 /* Estilos generales que ya tenías */
 .navbar-custom {
@@ -168,14 +173,48 @@ main{
   flex: 1;
 }
 
+.carrusel-img {
+  height: 500px;
+  object-fit: cover;
+}
+
+.carousel-caption {
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 15px;
+  border-radius: 10px;
+}
+
+/* Footer */
 .footer {
   background-color: var(--dark-color);
   color: white;
 }
 
-/* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
-.index {
-    background-color: darkblue;
+.hover-icon {
+  transition: transform 0.3s, color 0.3s;
+}
+
+.hover-icon:hover {
+  color: #0d6efd;
+  transform: scale(1.2);
+}
+
+.img-fluid{
+  border-radius: 20px;
+  transition: transform 0.3s;
+  box-shadow: 1px 1px 5px rgba(238, 235, 235, 0.5);
+}
+
+.img-fluid:hover{
+  transform: scale(1.05);
+}
+/* Footer */
+
+/* Esto permite que se mantenga en color activo segun la plantilla en la que se este 
+  deben colocar las clases de la plantilla en el html y en el css
+*/
+.index, .quienesSomos, .promociones {
+    background-color: rgb(47, 105, 239);
     color: #fff;
     font-weight: bold;
     box-shadow: inset 0 0 0 2px var(--light-gray);
