--- a/proyecto_web/proyecto_web/css/styleLogin.css
+++ b/proyecto_web/proyecto_web/css/styleLogin.css
@@ -110,7 +110,8 @@
 
 /* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
 .login {
-    background-color: darkblue;
+    background-color: rgb(47, 105, 239);
     color: #fff;
+    font-weight: bold;
     box-shadow: inset 0 0 0 2px var(--light-gray);
 }
