--- a/proyecto_web/proyecto_web/css/styleUsuario.css
+++ b/proyecto_web/proyecto_web/css/styleUsuario.css
@@ -27,7 +27,8 @@
 
 /* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
 .usuario {
-    background-color: darkblue;
+    background-color: rgb(47, 105, 239);
     color: #fff;
+    font-weight: bold;
     box-shadow: inset 0 0 0 2px var(--light-gray);
 }
