--- a/proyecto_web/proyecto_web/css/styleUsuario.css
+++ b/proyecto_web/proyecto_web/css/styleUsuario.css
@@ -25,10 +25,4 @@
     color: #ecf0f1;
 }
 
-/* Esto permite que se mantenga en color activo segun la plantilla en la que se este */
-.usuario {
-    background-color: rgb(47, 105, 239);
-    color: #fff;
-    font-weight: bold;
-    box-shadow: inset 0 0 0 2px var(--light-gray);
-}
+/* Esto permite que se mantenga en color activo segun la plantilla en la que se este (ya no es necesario) */
