--- a/proyecto_web/css/styleQuienes.css
+++ b/proyecto_web/css/styleQuienes.css
@@ -14,6 +14,7 @@
     padding: 40px;
     box-shadow: 0 3px 15px rgba(142, 68, 173, 0.15); 
     text-align: center;
+    transition: transform 0.3s;
 }
 
 .titulo-empresa {
@@ -22,8 +23,13 @@
     font-weight: bold;
 
 }
+
+.bloque{
+  transition: transform 0.3s;
+}
+
 .bloque:hover{
-      transform: scale(1.05); /* Efecto de hover */  
+    transform: scale(1.05); 
 }
 
 
