--- a/proyecto_web/css/styleResena.css
+++ b/proyecto_web/css/styleResena.css
@@ -6,3 +6,28 @@
   position: relative;
   width: 100%;
 }
+
+body {
+    font-family: 'Poppins', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Poppins', sans-serif;
+}
+.card-title, .card-text, .navbar-nav .nav-link {
+    font-family: 'Poppins', sans-serif;
+}
+
+.carousel-item {
+  text-align: center;
+  padding: 20px;
+}
+&nbsp
+&nbsp
+
+.carousel-item p {
+  font-style: italic;
+}
+
+.text-center {
+    text-align: center;
+}
