--- a/proyecto_web/css/styleResena.css
+++ b/proyecto_web/css/styleResena.css
@@ -10,8 +10,14 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1, h3, h4, h5, h6 {
     font-family: 'Poppins', sans-serif;
+    text-align: justify;
+}
+
+h2{
+  text-align: center;
 }
 .card-title, .card-text, .navbar-nav .nav-link {
     font-family: 'Poppins', sans-serif;
@@ -30,4 +36,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .text-center {
     text-align: center;
+}
+
+/* Evitar manipular el tamaño del textarea: el comentario */
+.form-control{
+  resize: none;
 }
