--- a/proyecto_web/css/style.css
+++ b/proyecto_web/css/style.css
@@ -123,6 +123,7 @@ body {
 .navbar-custom .nav-link {
   color: white;
   font-weight: 500;
+  text-align: center;
   text-transform: uppercase;
   border-radius: 20px;
   margin-left: 3px; /* Esto separa un poco los botones entre si */
@@ -133,6 +134,16 @@ body {
   background-color: rgb(47, 105, 239);
   border-radius: 20px;
 }
+/* Ajustar los botones */
+.navbar-custom .nav-link.buttonfix-link {
+  white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+  min-width: 130px; /* Ajusta este valor según lo que necesites */
+  text-align: center;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+}
+
+
 
 .select-menu {
   background-color: var(--primary-color);
