--- a/proyecto_web/css/stylePromo.css
+++ b/proyecto_web/css/stylePromo.css
@@ -91,7 +91,14 @@ main {
   transition: background-color 0.3s;
 }
 
-
+/* Ajustar los botones */
+.navbar-custom .nav-link.buttonfix-link {
+  white-space: nowrap; /* Evita que el texto se divida en varias líneas */
+  min-width: 130px; /* Ajusta este valor según lo que necesites */
+  text-align: center;
+  padding-left: 1.2rem;
+  padding-right: 1.2rem;
+}
 
 
 
