--- a/proyecto_web/css/stylePromo.css
+++ b/proyecto_web/css/stylePromo.css
@@ -8,32 +8,24 @@
 }
 
  body {
-  background-color: var(--background-color);
-    font-family: 'Poppins', sans-serif;
-  margin: 0;
-  height: 100%;
-}
+   background-color: var(--background-color);
+   font-family: 'Poppins', sans-serif;
+   margin: 0;
+   height: 100%;
+ }
 
  h1 {
-    font-size: 32px;
-    margin-top: 40px;        /* Margen superior */
-    margin-bottom: 20px;     /* Margen inferior */
-    font-weight: bold;
-    text-align: center;      /* Centrar el texto horizontalmente */
+  font-size: 32px;
+  margin-top: 40px;        /* Margen superior */
+  margin-bottom: 20px;     /* Margen inferior */
+  font-weight: bold;
+  text-align: center;      /* Centrar el texto horizontalmente */
 }
 
 main {
   padding: 2rem;
   max-width: 1000px;
   margin: auto;
-}
-
- h1 {
-    font-size: 32px;
-    margin-top: 40px;        /* Margen superior */
-    margin-bottom: 20px;     /* Margen inferior */
-    font-weight: bold;
-    text-align: center;      /* Centrar el texto horizontalmente */
 }
 
 main {
@@ -57,7 +49,6 @@ main {
   border-left: 5px solid #28a745;
   flex: 1;
   padding: 20px;
-  
 }
 
 .imagen-promocion {
@@ -94,12 +85,8 @@ main {
 /* Ajustar los botones */
 .navbar-custom .nav-link.buttonfix-link {
   white-space: nowrap; /* Evita que el texto se divida en varias líneas */
-  min-width: 130px; /* Ajusta este valor según lo que necesites */
+  min-width: 130px;
   text-align: center;
   padding-left: 1.2rem;
   padding-right: 1.2rem;
 }
-
-
-
-
