Cambios leves en todos los titulos de las plantillas html y un breve cambio en el css de Urbano. Nada comprometedor.

--- a/proyecto_web/css/StyleUrbanoRural.css
+++ b/proyecto_web/css/StyleUrbanoRural.css
@@ -60,7 +60,7 @@ body {
 
 /* Banner */
 .banner-urbano {
-  background-image: url("../images/bannerTurismo.jpg");
+  background-image: url("../images/turismoUrbano.jpeg");
   background-size: cover;
   background-position: center;
   height: 60vh;
