--- a/proyecto_web/css/styleResena.css
+++ b/proyecto_web/css/styleResena.css
@@ -8,34 +8,43 @@
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 h1, h3, h4, h5, h6 {
-    font-family: 'Poppins', sans-serif;
-    text-align: justify;
+  font-family: 'Poppins', sans-serif;
+  text-align: justify;
 }
 
 h2{
   text-align: center;
 }
+
+.card{
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.card:hover{
+  transform:scale(1.03);
+  box-shadow: 7px 5px 4px #333;
+}
+
 .card-title, .card-text, .navbar-nav .nav-link {
-    font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 .carousel-item {
   text-align: center;
   padding: 20px;
 }
-&nbsp
-&nbsp
 
 .carousel-item p {
   font-style: italic;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 /* Evitar manipular el tamaño del textarea: el comentario */
