--- a/proyecto_web/css/style.css
+++ b/proyecto_web/css/style.css
@@ -123,10 +123,13 @@ body {
 .navbar-custom .nav-link {
   color: white;
   font-weight: 500;
-  text-align: center;
+  
   text-transform: uppercase;
   border-radius: 20px;
-  margin-left: 3px; /* Esto separa un poco los botones entre si */
+  margin-left: 5px; /* Esto separa un poco los botones entre si */
+}
+.turismo{
+text-align: center;
 }
 
 .navbar-custom .nav-link:hover {
@@ -143,18 +146,27 @@ body {
   padding-right: 1.2rem;
 }
 
-
-
 .select-menu {
   background-color: var(--primary-color);
   color: white;
   border: none;
   border-radius: 5px;
   padding: 0.4rem 1rem;
+  margin-top: 2%;
+  margin-left: 1rem;   /* Aproximadamente igual a mx-3 */
+  margin-right: 1rem;
+  margin-top: 0.25rem; /* Aproximadamente igual a my-1 */
+  margin-bottom: 0.25rem;
+}
+
+
+.select-menu:focus{
+  outline: none;
 }
 
 .select-menu:hover {
   background-color: rgb(47, 105, 239);
+  
 }
 
 .card-feature {
@@ -283,7 +295,6 @@ main{
 }
 /* Carrusel */
 
-
 /* Footer */
 .footer {
   background-color: var(--dark-color);
@@ -318,6 +329,18 @@ main{
   box-shadow: inset 0 0 0 2px var(--light-gray);
 }
 
+/* Animación de entrada para el caption */
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-40px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
 
 /* Estilos responsivos */
 
@@ -342,14 +365,54 @@ main{
   }
 }
 
-/* Animación de entrada para el caption */
-@keyframes slideInLeft {
-  from {
-    opacity: 0;
-    transform: translateX(-40px);
+@media (max-width: 991.98px) {
+  .navbar-toggler{
+    margin-right: auto;
+    margin-left: 0.5rem;
+    z-index: 1051;
   }
-  to {
-    opacity: 1;
-    transform: translateX(0);
+
+  .navbar-custom .navbar-nav{
+    margin-top: 1rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .select-menu{
+    font-size: 16px;
+    padding: 10px 20px;
+    width: 100%;
+    border: none;
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+    box-sizing: border-box;
+  }
+
+  .select-menu:focus{
+    outline: none;
+  }
+
+  .nav-item{
+    margin-bottom: 12px;
+  }
+
+  #userDropdownBtn{
+    padding: 10px 20px;
+    border-radius: 25px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+  }
+
+  #userDropdownBtn img{
+    width: 30px;
+    height: 30px;
+    object-fit: cover;
+  }
+
+  .dropdown-menu{
+    text-align: center;
+    width: 100%;
   }
 }
